--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "heroku": "^7.62.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "mocha": "^10.0.0"
